src/main/java/edu/uiowa/jopenmm/OpenMMAmoebaLibrary.java


  public static final double OpenMM_AngstromsPerNm = 10.0;
  public static final double OpenMM_PsPerFs = 0.001;
  public static final double OpenMM_FsPerPs = 1000.0;
  public static final double OpenMM_KJPerKcal = 4.184;
  public static final double OpenMM_KcalPerKJ = 1.0 / 4.184;
  public static final double OpenMM_RadiansPerDegree = 3.1415926535897932385 / 180.0;
  public static final double OpenMM_DegreesPerRadian = 180.0 / 3.1415926535897932385;
  public static final double OpenMM_SigmaPerVdwRadius = 1.7817974362806786095;
  /**
   * OpenMM_3D_DoubleArray<br>
   * Original signature : <code>OpenMM_3D_DoubleArray* OpenMM_3D_DoubleArray_create(int, int, int)
   * </code>
   */
  public static native PointerByReference OpenMM_3D_DoubleArray_create(
      int size1, int size2, int size3);
  /**
   * Original signature : <code>
   * void OpenMM_3D_DoubleArray_set(OpenMM_3D_DoubleArray*, int, int, OpenMM_DoubleArray*)</code>
   */
  public static native void OpenMM_3D_DoubleArray_set(
      PointerByReference array, int index1, int index2, PointerByReference values);
  /**
   * Original signature : <code>void OpenMM_3D_DoubleArray_destroy(OpenMM_3D_DoubleArray*)</code>
   */
  public static native void OpenMM_3D_DoubleArray_destroy(PointerByReference array);
  /**
   * AmoebaTorsionTorsionForce<br>
   * Original signature : <code>
   * OpenMM_AmoebaTorsionTorsionForce* OpenMM_AmoebaTorsionTorsionForce_create()</code>
   */
  public static native PointerByReference OpenMM_AmoebaTorsionTorsionForce_create();
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaTorsionTorsionForce_destroy(OpenMM_AmoebaTorsionTorsionForce*)</code>
   */
  public static native void OpenMM_AmoebaTorsionTorsionForce_destroy(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaTorsionTorsionForce_getNumTorsionTorsions(const OpenMM_AmoebaTorsionTorsionForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaTorsionTorsionForce_getNumTorsionTorsions(
      PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaTorsionTorsionForce_getNumTorsionTorsionGrids(const OpenMM_AmoebaTorsionTorsionForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaTorsionTorsionForce_getNumTorsionTorsionGrids(
      PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaTorsionTorsionForce_addTorsionTorsion(OpenMM_AmoebaTorsionTorsionForce*, int, int, int, int, int, int, int)
   * </code>
   */
  public static native int OpenMM_AmoebaTorsionTorsionForce_addTorsionTorsion(
      PointerByReference target,
      int particle1,
      int particle2,
      int particle3,
      int particle4,
      int particle5,
      int chiralCheckAtomIndex,
      int gridIndex);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaTorsionTorsionForce_getTorsionTorsionParameters(const OpenMM_AmoebaTorsionTorsionForce*, int, int*, int*, int*, int*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaTorsionTorsionForce_getTorsionTorsionParameters(
      PointerByReference target,
      int index,
      IntBuffer particle1,
      IntBuffer particle2,
      IntBuffer particle3,
      IntBuffer particle4,
      IntBuffer particle5,
      IntBuffer chiralCheckAtomIndex,
      IntBuffer gridIndex);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaTorsionTorsionForce_getTorsionTorsionParameters(const OpenMM_AmoebaTorsionTorsionForce*, int, int*, int*, int*, int*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaTorsionTorsionForce_getTorsionTorsionParameters(
      PointerByReference target,
      int index,
      IntByReference particle1,
      IntByReference particle2,
      IntByReference particle3,
      IntByReference particle4,
      IntByReference particle5,
      IntByReference chiralCheckAtomIndex,
      IntByReference gridIndex);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaTorsionTorsionForce_setTorsionTorsionParameters(OpenMM_AmoebaTorsionTorsionForce*, int, int, int, int, int, int, int, int)
   * </code>
   */
  public static native void OpenMM_AmoebaTorsionTorsionForce_setTorsionTorsionParameters(
      PointerByReference target,
      int index,
      int particle1,
      int particle2,
      int particle3,
      int particle4,
      int particle5,
      int chiralCheckAtomIndex,
      int gridIndex);
  /**
   * Original signature : <code>
   * OpenMM_3D_DoubleArray* OpenMM_AmoebaTorsionTorsionForce_getTorsionTorsionGrid(const OpenMM_AmoebaTorsionTorsionForce*, int)
   * </code>
   */
  public static native PointerByReference OpenMM_AmoebaTorsionTorsionForce_getTorsionTorsionGrid(
      PointerByReference target, int index);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaTorsionTorsionForce_setTorsionTorsionGrid(OpenMM_AmoebaTorsionTorsionForce*, int, const OpenMM_3D_DoubleArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaTorsionTorsionForce_setTorsionTorsionGrid(
      PointerByReference target, int index, PointerByReference grid);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaTorsionTorsionForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaTorsionTorsionForce*, OpenMM_Boolean)
   * </code>
   */
  public static native void OpenMM_AmoebaTorsionTorsionForce_setUsesPeriodicBoundaryConditions(
      PointerByReference target, int periodic);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaTorsionTorsionForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaTorsionTorsionForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaTorsionTorsionForce_usesPeriodicBoundaryConditions(
      PointerByReference target);
  /**
   * Original signature : <code>OpenMM_HippoNonbondedForce* OpenMM_HippoNonbondedForce_create()
   * </code>
   */
  public static native PointerByReference OpenMM_HippoNonbondedForce_create();
  /**
   * Original signature : <code>void OpenMM_HippoNonbondedForce_destroy(OpenMM_HippoNonbondedForce*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_destroy(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_HippoNonbondedForce_getNumParticles(const OpenMM_HippoNonbondedForce*)</code>
   */
  public static native int OpenMM_HippoNonbondedForce_getNumParticles(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_HippoNonbondedForce_getNumExceptions(const OpenMM_HippoNonbondedForce*)</code>
   */
  public static native int OpenMM_HippoNonbondedForce_getNumExceptions(PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_HippoNonbondedForce_NonbondedMethod OpenMM_HippoNonbondedForce_getNonbondedMethod(const OpenMM_HippoNonbondedForce*)
   * </code>
   */
  public static native int OpenMM_HippoNonbondedForce_getNonbondedMethod(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setNonbondedMethod(OpenMM_HippoNonbondedForce*, OpenMM_HippoNonbondedForce_NonbondedMethod)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setNonbondedMethod(
      PointerByReference target, int method);
  /**
   * Original signature : <code>
   * double OpenMM_HippoNonbondedForce_getCutoffDistance(const OpenMM_HippoNonbondedForce*)</code>
   */
  public static native double OpenMM_HippoNonbondedForce_getCutoffDistance(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setCutoffDistance(OpenMM_HippoNonbondedForce*, double)</code>
   */
  public static native void OpenMM_HippoNonbondedForce_setCutoffDistance(
      PointerByReference target, double distance);
  /**
   * Original signature : <code>
   * double OpenMM_HippoNonbondedForce_getSwitchingDistance(const OpenMM_HippoNonbondedForce*)
   * </code>
   */
  public static native double OpenMM_HippoNonbondedForce_getSwitchingDistance(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setSwitchingDistance(OpenMM_HippoNonbondedForce*, double)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setSwitchingDistance(
      PointerByReference target, double distance);
  /**
   * Original signature : <code>
   * OpenMM_DoubleArray* OpenMM_HippoNonbondedForce_getExtrapolationCoefficients(const OpenMM_HippoNonbondedForce*)
   * </code>
   */
  public static native PointerByReference OpenMM_HippoNonbondedForce_getExtrapolationCoefficients(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setExtrapolationCoefficients(OpenMM_HippoNonbondedForce*, const OpenMM_DoubleArray*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setExtrapolationCoefficients(
      PointerByReference target, PointerByReference coefficients);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getPMEParameters(const OpenMM_HippoNonbondedForce*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getPMEParameters(
      PointerByReference target, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getPMEParameters(const OpenMM_HippoNonbondedForce*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getPMEParameters(
      PointerByReference target,
      DoubleByReference alpha,
      IntByReference nx,
      IntByReference ny,
      IntByReference nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getDPMEParameters(const OpenMM_HippoNonbondedForce*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getDPMEParameters(
      PointerByReference target, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getDPMEParameters(const OpenMM_HippoNonbondedForce*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getDPMEParameters(
      PointerByReference target,
      DoubleByReference alpha,
      IntByReference nx,
      IntByReference ny,
      IntByReference nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setPMEParameters(OpenMM_HippoNonbondedForce*, double, int, int, int)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setPMEParameters(
      PointerByReference target, double alpha, int nx, int ny, int nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_setDPMEParameters(OpenMM_HippoNonbondedForce*, double, int, int, int)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_setDPMEParameters(
      PointerByReference target, double alpha, int nx, int ny, int nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getPMEParametersInContext(const OpenMM_HippoNonbondedForce*, const OpenMM_Context*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getPMEParametersInContext(
      PointerByReference target,
      PointerByReference context,
      DoubleBuffer alpha,
      IntBuffer nx,
      IntBuffer ny,
      IntBuffer nz);
  /**
   * Original signature : <code>
   * void OpenMM_HippoNonbondedForce_getPMEParametersInContext(const OpenMM_HippoNonbondedForce*, const OpenMM_Context*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_HippoNonbondedForce_getPMEParametersInContext(
      PointerByReference target,
      PointerByReference context,
      DoubleByReference alpha,
      IntByReference nx,
      IntByReference ny,
      IntByReference nz);
